# render-meaning-tree

./: .gitignore  .gitmodules  DICT_LIKE_DATACLASS_README.md  Makefile  README.md  ast.json  cfg_domain.loqi  code_example.java  code_example.py  code_example4.py  construct_appearance.yml  constructs.yml  demo_dict_like_dataclass.py  demo_json_loading.py  java_renderer.py  main.py  pyproject.toml  python_renderer.py  renderer.py  requirements.txt
src/: cfg.py  cfg_tools.py  code_renderer.py  common_utils.py  html_utils.py  json_search.py  meaning_tree.py  renderer.py  types.py
src/cfg/: README_safety.md  README_visualizer.md  __init__.py  abstractions.py  access_property.py  ast_wrapper.py  cfg.py  cfg_builder.py  cfg_visualizer.py  constructs.yml  mt2cfg.py  reachability.py
src/helpers/: diff.py
src/serializers/: compprehension_serializer.py  serializer.py  types.py
templates/: base.html  base_new.html
templates/utils/: codeline.html  play-btn.html
test/: README_cfg_visualizer_test.md  ast.json  ast5.json  code_example.java  test_abstractions_json_loading.py  test_cfg.py  test_cfg_visualizer.py  test_cfg_visualizer_safety.py  test_create_html.py  test_dict_like_dataclass.py  test_meaning_tree.py  test_prop_path.py  test_simple_json_loading.py
test/data/: ast3.json  ast4.json  ast6.json  ast7.json  ast8.json  ast9.json
test/examples/: code_example.py  code_example3.py  code_example6.py  code_example7.py  code_example8.py  code_example9.py
