[project]
name = "crap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "networkx>=3.2.1",
    "matplotlib>=3.8.4",
    "colorama>=0.4.6",
]

[dependency-groups]
dev = [
    "ruff>=0.11.5",
]
